# VibeBus

./: .dockerignore  .gitignore  .gitmessage  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml
.agents/plugins/: marketplace.json
.config/: dotnet-tools.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.vibebus/: project.json  responsibility.json
docs/: HANDOFF.md  acceptance.md  architecture.md  backup-restore.md  container.md  design-research.md  desktop-acceptance.md  macos.md  operator-acceptance.md  plan-gap-analysis.md  protocol.md  release.md
docs/migration/: 2026-07-19-pc-to-mac.md
installer/: Package.wxs
plugins/vibebus/: .mcp.json  .mcp.macos.json  README.md
plugins/vibebus/.codex-plugin/: plugin.json
plugins/vibebus/hooks/: hooks.json
scripts/: audit-desktop-acceptance.ps1  build-release.ps1  normalize-cyclonedx.py  package-plugin-macos.sh  package-plugin.ps1  preflight-desktop-acceptance.ps1  push-acr.ps1  sign-windows.ps1  test-backup-restore.ps1  test-container.ps1  test-installer.ps1  test-lifecycle-hooks.ps1  test-lifecycle-hooks.sh  test-macos-keychain.sh  test_macos_keychain.py  validate-plugin-macos.sh  validate-plugin.ps1  validate_plugin_macos.py
src/: error.rs  hooks.rs  lib.rs  main.rs  mcp.rs  models.rs  policy.rs  project.rs  store.rs  vault.rs
tests/: cli_workflow.rs  core_workflows.rs  credential_vault.rs  mcp_protocol.rs
(+5 files in other folders)
